--- a/Doctors/templates/addnextAppointment.html
+++ b/Doctors/templates/addnextAppointment.html
@@ -1,4 +1,4 @@
-{% include 'navbar.html' %}
+{% include 'navbardoctors.html' %}
 {% load encrypt%}
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
