--- a/Doctors/templates/ViewDiagnosis.html
+++ b/Doctors/templates/ViewDiagnosis.html
@@ -1,5 +1,5 @@
 {% include 'navbardoctors.html' %}
-
+{%load encrypt%}
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -45,13 +45,13 @@
                 <h1 style="color: brown;">No patient diagnosis with this id number</h1>
             {% endif %}
             {%for a in patientdetails%}
-            <a href="/doctors/diagnosis/searchDiagnosis/{{a.appointment_id}}">
+            <a href="/doctors/diagnosis/searchDiagnosis/{{k|patient_id_encrypt_tag:a.appointment_id}}">
                 <p data-placement="top" data-toggle="tooltip" title="Update">
                     <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
                             data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
                 </p>
             </a>
-            <a href="/doctors/diagnosis/searchDiagnosis/deleteDiagnosis/{{a.appointment_id}}/{{a.patient_id}}">
+            <a href="/doctors/diagnosis/searchDiagnosis/deleteDiagnosis/{{k|patient_id_encrypt_tag:a.appointment_id}}/{{k|patient_id_encrypt_tag:a.patient_id}}">
                 <p data-placement="top" data-toggle="tooltip" title="Delete">
                     <button class="btn btn-info btn-xs" data-title="Delete" data-toggle="modal"
                             data-target="#edit"><span class="glyphicon glyphicon-trash"></span>Delete Diagnosis </button>
