--- a/Doctors/templates/patientDiagnosis.html
+++ b/Doctors/templates/patientDiagnosis.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% include 'navbardoctors.html' %}
+{%load encrypt%}
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -76,7 +77,7 @@
     </form>
     <br>
     <br>
-    <a href="/doctors/addnextAppointment/{{details.appointment_id}}">
+    <a href="/doctors/addnextAppointment/{{k|patient_id_encrypt_tag:details.appointment_id}}">
         <p data-placement="top" data-toggle="tooltip" title="Update">
             <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
                     data-target="#edit"><span class="glyphicon glyphicon-plus">Add Next Appointment</span></button>
