--- a/Doctors/templates/searchResultsView.html
+++ b/Doctors/templates/searchResultsView.html
@@ -1,5 +1,5 @@
 {% include 'navbardoctors.html' %}
-
+{%load encrypt%}
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -45,7 +45,7 @@
         </script>
             {% csrf_token %}
             {%for a in patientdetails%}
-            <a href="/doctors/patientRecords/search/{{a.patient_id}}">
+            <a href="/doctors/patientRecords/search/{{k|patient_id_encrypt_tag:a.patient_id}}">
                 <p data-placement="top" data-toggle="tooltip" title="Update">
                     <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
                             data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
