--- a/InsuranceStaff/templates/insuranceHome.html
+++ b/InsuranceStaff/templates/insuranceHome.html
@@ -50,7 +50,7 @@
               <div class="icon">
                 <i class="fas fa-tasks"></i>
               </div>
-              <a href="viewClaimRequests" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              <a href="/insurance/viewClaimRequests" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
           <!-- ./col -->
@@ -65,7 +65,7 @@
               <div class="icon">
                 <i class="fas fa-dollar-sign"></i>
               </div>
-              <a href="insurancePayments" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              <a href="/insurance/insurancePayments" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
           <!-- ./col -->
