--- a/Patients/templates/insuranceClaimRequest.html
+++ b/Patients/templates/insuranceClaimRequest.html
@@ -131,33 +131,13 @@
                             
                             <td width="5%">
                                 {%if a.claim_status == 'Pending'%}
-                                <a href="/patient/updateInsuranceClaimRequest/{{a.claim_id}}/{{a.patient_id}}">
+                                <a href="/patient/updateInsuranceClaimRequest/{{k|patient_id_encrypt_tag:a.claim_id}}/{{k|patient_id_encrypt_tag:a.patient_id}}">
                                     <p data-placement="top" data-toggle="tooltip" title="Update">
                                         <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
                                                 data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
                                     </p>
                                 </a>
-                                {%elif a.claim_status == 'Confirmed'%}
-                                <a href="/quote/insuranceClaimRequest/update/{{q.id}}">
-                                    <p data-placement="top" data-toggle="tooltip" title="View">
-                                        <button class="btn btn-info btn-xs" data-title="View" data-toggle="modal"
-                                                data-target="#edit"><span class="fa fa-eye"></span></button>
-                                    </p>
-                                </a>
-                                {%elif a.claim_status == 'Rejected'%}
-                                <a href="/quote/insuranceClaimRequest/update/{{q.id}}">
-                                    <p data-placement="top" data-toggle="tooltip" title="View">
-                                        <button class="btn btn-info btn-xs" data-title="View" data-toggle="modal"
-                                                data-target="#edit"><span class="fa fa-eye"></span></button>
-                                    </p>
-                                </a>
-                                {%elif a.claim_status == 'Cancelled'%}
-                                <a href="/quote/insuranceClaimRequest/update/{{q.id}}">
-                                    <p data-placement="top" data-toggle="tooltip" title="View">
-                                        <button class="btn btn-info btn-xs" data-title="View" data-toggle="modal"
-                                                data-target="#edit"><span class="fa fa-eye"></span></button>
-                                    </p>
-                                </a>
+                            
                                 {%endif%}
                             </td>
 
