--- a/Doctors/templates/viewLabReports.html
+++ b/Doctors/templates/viewLabReports.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <form action="search1" method="get" class="d-flex">
                 <h4>Enter Appointment Id:</h4>
-                <input name="query" type="text" placeholder="appointment id">
+                <input name="query" type="number" placeholder="appointment id">
                 <!-- <h4>Enter Lab Test:</h4>
                 <input name="query1" type="text" placeholder="lab test name"> -->
 
