--- a/Doctors/templates/addnextAppointment.html
+++ b/Doctors/templates/addnextAppointment.html
@@ -38,8 +38,7 @@
 
 
             <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#request">Request Appointment</a></li>
-                <li><a data-toggle="tab" href="#view">View Appointments</a></li>
+                <li class="active"><a data-toggle="tab" href="#request">Add Next Appointment</a></li>
             </ul>
             <div class="tab-content">
                 <div id="request" class="tab-pane fade in active">
@@ -49,105 +48,13 @@
                         {%for field in appointmentForm%}
                         {{ field.label_tag }} {{ field }}</br>
                         {%endfor%}
-                        <div class="form-group" style="margin-bottom:10px;margin-top:30px;">
-                                                         <label>Appointment with**:</label>
-                                                         <select class="form-control" style="margin-block-end: 20px;" name="doctor_id"
-                                                                 style="width:50%; font-size:15px">
-                                                             <option disabled selected value> -- select --</option>
-                                                             {%for doc in docDetails%}
-                                                             <option value="{{k|patient_id_encrypt_tag:doc.doctor_id}}">{{doc.doctor_name}} -- {{doc.doctor_spec}}</option>
-                                                             {%endfor%}
-                                                         </select>
-                                                     </div>
+                        
                         <button type="submit" class="btn btn-primary">Submit</button>
 
                     </form>
 
                 </div>
-                <div id="view" class="tab-pane fade">
-                    <h3>View Appointments</h3>
-                    <table id="data" class="table table-striped table-bordered compact" cellspacing="0" style="width:100%">
-                        <thead>
-                        <tr>
-                            <th>Appointment ID</th>
-            
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>Appointment With</th>
-                            <th>Requested Date</th>
-                            <th>Status</th>
-                            <th>Transaction</th>
-                            <th>Transaction_ID</th>
-                            <th>Action</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {%for a in record%}
-                        <tr>
-                            <td width="5%">{{a.appointment_id}}</td>
-                           
-                            <td width="10%">{{a.first_name}}</td>
-                            <td width="10%">{{a.last_name}}</td>
-                            <td width="20%">{{a.doctor_name}} -- {{a.doctor_spec}}</td>
-                            <td width="10%">{{a.requested_date}}</td>
-                            <td width="10%">{{a.status}}</td>  
-                            <td width="10%">{{a.transaction_status}} 
-                                {% if a.transaction_status == 'Pending'%} 
-                                <p data-placement="top" data-toggle="tooltip" title="Update"></p>
-                                <a href="/patient/approveTransaction/{{a.appointment_id}}">
-                                        <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
-                                                data-target="#edit"><span class="fa fa-thumbs-up"></span></button>
-                                    
-                                </a> 
-                                <a href="/patient/declineTransaction/{{a.appointment_id}}">
-                                        <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
-                                                data-target="#edit"><span class="fa fa-thumbs-down"></span></button>
-                                  
-                                </a> 
-                            </p>
-
-                                {%endif%} 
-                            </td>   
-                            
-                            <td width="10%">{{a.transaction_id}} </td>
-                            <td width="5%">
-                                {%if a.status == 'Pending'%}
-                               <a href="/patient/updateAppointment/{{k|patient_id_encrypt_tag:a.appointment_id}}/{{k|patient_id_encrypt_tag:id}}">
-                                    <p data-placement="top" data-toggle="tooltip" title="Update">
-                                        <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
-                                                data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
-                                    </p>
-                                </a>
-                                {%elif a.status == 'Confirmed'%}
-                                <a href="/patient/cancelAppointment/{{k|patient_id_encrypt_tag:a.appointment_id}}/{{k|patient_id_encrypt_tag:id}}">
-                                    <p data-placement="top" data-toggle="tooltip" title="View"> 
-                                          <button class="btn btn-danger btn-xs" data-title="Cancel Appointment" data-toggle="modal"
-                                               data-target="#edit"><span class="fa fa-times"></span></button>
-                                         
-                                    </p>
-                                </a>
-                                {%elif a.status == 'Rejected'%}
-                                <p data-placement="top" data-toggle="tooltip" title="View">
-                                    Cannnot Update this Record
-                                    </p>
-                                {%elif a.status == 'Cancelled'%}
-                                    <p data-placement="top" data-toggle="tooltip" title="View">
-                                               Cannnot Update this Record
-
-                                    </p>
-                                {%endif%}
-                            </td>
-
-
-                        </tr>
-                        {%endfor%}
-                        </tbody>
-                    </table>
-        
-                    <p> </p>
-                </div>
             </div>
-        </div>
 
 
 
