--- a/Doctors/templates/patientDiagnosis.html
+++ b/Doctors/templates/patientDiagnosis.html
@@ -33,7 +33,7 @@
             {%elif flag == "true" %}
             {% csrf_token %}
             {%for a in details2%}
-            <a href="/doctors/addDiagnosis/{{a.appointment_id}}">
+            <a href="/doctors/addDiagnosis/{{k|patient_id_encrypt_tag:details.appointment_id}}">
                 <p data-placement="top" data-toggle="tooltip" title="Update">
                     <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
                             data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
