--- a/Doctors/templates/searchDiagnosis.html
+++ b/Doctors/templates/searchDiagnosis.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <h4>Enter Patient Id:</h4>
             <form action="searchDiagnosis" method="get" class="d-flex">
-                <input name="query" type="text" placeholder="Search...">
+                <input name="query" type="number" placeholder="Search...">
                 <button class="btn btn-outline-success" type="submit">
                     <i class="fa fa-search"></i>
                 </button>
