--- a/Patients/templates/requestLabTests.html
+++ b/Patients/templates/requestLabTests.html
@@ -98,7 +98,7 @@
                             <!-- <td width="10%">{{a.lab_test_status}}</td>   -->
                             
                             <td width="5%">
-                                {%if a.lab_test_status == 'adding....'%}
+                                {%if a.lab_test_status == 'Recommended'%}
                                 
                                     <p data-placement="top" data-toggle="tooltip" title="Update">
                                         <form method="POST">  {%csrf_token%}
@@ -110,20 +110,8 @@
                                             <button type="submit" class="btn btn-primary">Request Test</button>
                                         </form></p>
                                 
-                                {%elif a.status == 'Confirmed'%}
-                                <a href="/quote/bookAppointment/update/{{q.id}}">
-                                    <p data-placement="top" data-toggle="tooltip" title="View">
-                                        <button class="btn btn-info btn-xs" data-title="View" data-toggle="modal"
-                                                data-target="#edit"><span class="fa fa-eye"></span></button>
-                                    </p>
-                                </a>
-                                {%elif a.status == 'Rejected'%}
-                                <a href="/quote/bookAppointment/update/{{q.id}}">
-                                    <p data-placement="top" data-toggle="tooltip" title="View">
-                                        <button class="btn btn-info btn-xs" data-title="View" data-toggle="modal"
-                                                data-target="#edit"><span class="fa fa-eye"></span></button>
-                                    </p>
-                                </a>
+                                
+                                
                                 {%elif a.status == 'Cancelled'%}
                                 <a href="/quote/bookAppointment/update/{{q.id}}">
                                     <p data-placement="top" data-toggle="tooltip" title="View">
