--- a/Doctors/templates/viewLabReports.html
+++ b/Doctors/templates/viewLabReports.html
@@ -30,10 +30,10 @@
             {% endif %}
             {%for a in labreportdetails%}
     <label aria-setsize="20">Lab Test Name</label>
-    <textfield style=" min-width:25px; max-width:50%;min-height:50px;height:50%;width:50%;">{{a.lab_test}}</textfield>
+    <textfield style=" min-width:25px; max-width:50%;min-height:50px;height:50%;width:50%;">{{a.test_name}}</textfield>
     <br>
     <label>Lab Report</label>
-    <textfield style=" min-width:25px; max-width:50%;min-height:50px;height:50%;width:50%;">{{a.lab_report}}</textfield>
+    <textfield style=" min-width:25px; max-width:50%;min-height:50px;height:50%;width:50%;">{{a.report_info}}</textfield>
     <br>
     <br>
     <br>
