--- a/AdminSHS/templates/adminHome.html
+++ b/AdminSHS/templates/adminHome.html
@@ -1,5 +1,7 @@
 {% load static %}
 {% include 'adminNavbar.html' %}
+{% load encrypt%}
+
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -27,7 +29,7 @@
                         <div class="icon">
                             <i class="fas fa-stethoscope"></i>
                         </div>
-                        <a href="createEmployeeRecords.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="/adminSHS/createEmployeeRecords/{{k|patient_id_encrypt_tag:id}}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -41,7 +43,7 @@
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
                         </div>
-                        <a href="showInternalFiles.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="/adminSHS/showInternalFiles/{{k|patient_id_encrypt_tag:id}}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -54,7 +56,7 @@
                         <div class="icon">
                             <i class="fas fa-heartbeat"></i>
                         </div>
-                        <a href="appointmentTransactionRequests.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="/adminSHS/appointmentTransactionRequests/{{k|patient_id_encrypt_tag:id}}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -67,7 +69,7 @@
                         <div class="icon">
                             <i class="fas fa-plus-square"></i>
                         </div>
-                        <a href="showLogFiles.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="/adminSHS/showLogFiles/{{k|patient_id_encrypt_tag:id}}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
