--- a/Patients/templates/profileUpdateRequest.html
+++ b/Patients/templates/profileUpdateRequest.html
@@ -1,4 +1,5 @@
 {% include 'navbar.html' %}
+{% load encrypt%}
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -64,13 +65,14 @@ border-radius:0!important;
                         <p  class="list-group-item"> Address : {{patientDetails.patient_address}}</p>
                         <p  class="list-group-item"> Phone number : {{patientDetails.patient_phone_no}}</p>
                         <p  class="list-group-item"> Email : {{patientDetails.patient_email}}</p>
-                        <p  class="list-group-item"> <a href="/patient/home/{{id}}" ><button class="btn btn-warning" >Back to Home</button></a> </p>
+                        <p  class="list-group-item"> <a href="/patient/home/{{k|patient_id_encrypt_tag:id}}" ><button class="btn btn-warning" >Back to Home</button></a> </p>
                     </div>
 
 
                     {%if patientDetails.change_request_status == 1%}
                     <h5>Pending Requests</h5>
-                    <table id="data" class="table table-striped table-bordered compact" cellspacing="0" style="width:100%">
+                    <table id="data" class="table table-striped table-bordered com  `[]
+                    pact" cellspacing="0" style="width:100%">
                         <thead>
                         <tr>
                             <th>Info</th>
@@ -82,7 +84,8 @@ border-radius:0!important;
                         
                         <tr>
                             <td width="5%">{{patientDetails.request_info}}</td>
-                            <td width="10%">{{patientDetails.status}}</td>                  
+
+                            <td width="10%">Pending</td>                  
                         </tr>
                        
                         
@@ -103,7 +106,7 @@ border-radius:0!important;
                       
                         <tr>
                             <td width="5%">{{patientDetails.request_info}}</td>
-                            <td width="10%">{{patientDetails.Completed}}</td>                  
+                            <td width="10%">Completed</td>                  
                         </tr>
                        
                         
