--- a/Patients/templates/bookAppointment.html
+++ b/Patients/templates/bookAppointment.html
@@ -92,7 +92,7 @@
                             <td width="10%">{{a.requested_date}}</td>
                             <td width="10%">{{a.status}}</td>  
                             <td width="10%">{{a.transaction_status}} 
-                                {% if a.transaction_status == 'Pending'%} 
+                                {% if a.transaction_status == 'Pending' and a.status == 'Confirmed' %} 
                                 <p data-placement="top" data-toggle="tooltip" title="Update"></p>
                                 <a href="/patient/approveTransaction/{{a.appointment_id}}">
                                         <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
